--- a/config.json
+++ b/config.json
@@ -10,10 +10,11 @@
       "6": "how",
       "7": "yesno"
   },
-  "intent_data_path": "data/IntentData.csv",
-  "intent_model_path": "data/intent_reconizer",
-  "intent_map_path": "data/intent_map.pickle",
-  "question_type_data_path": "data/QuestionTypeData",
-  "question_type_model_path": "data/question_type_reconizer",
-  "question_type_map_path": "data/question_type_map.pickle"
+  "intent_data_path": "nlu/data/IntentData.csv",
+  "intent_model_path": "nlu/data/intent_reconizer",
+  "intent_map_path": "nlu/data/intent_map.pickle",
+  "question_type_data_path": "nlu/data/QuestionTypeData",
+  "question_type_model_path": "nlu/data/question_type_reconizer",
+  "question_type_map_path": "nlu/data/question_type_map.pickle",
+  "predict_threshold": "0.5"
 }
