Implement critical data analyze functions

--- a/config.json
+++ b/config.json
@@ -11,12 +11,12 @@
       "7": "yesno"
   },
   "named_entity_types": ["LOC", "PER", "ORG", "MISC"],
-  "critical_data_check_pattern": [
-    "any-E-main",
-    "N-main",
-    "main-N",
-    "main-E-any"
+  "critical_data_ng_pattern": [
+    "N-E-main",
+    "N-main"
   ],
+  "exclude_pos_tag": ["E", "A", "L", "CH"],
+  "exclude_word": ["bị", "được", "giữa", "và"],
   "intent_data_path": "nlu/data/IntentData.csv",
   "intent_model_path": "nlu/data/intent_reconizer",
   "intent_map_path": "nlu/data/intent_map.pickle",
