--- a/config.json
+++ b/config.json
@@ -15,8 +15,8 @@
     "N-E-main",
     "N-main"
   ],
-  "exclude_pos_tag": ["E", "A", "L", "CH"],
-  "exclude_word": ["bị", "được", "giữa", "và"],
+  "exclude_pos_tag": ["E", "A", "L", "CH", "X"],
+  "exclude_word": ["bị", "được", "giữa", "và", "là"],
   "intent_data_path": "nlu/data/IntentData.csv",
   "intent_model_path": "nlu/data/intent_reconizer",
   "intent_map_path": "nlu/data/intent_map.pickle",
