--- a/config.json
+++ b/config.json
@@ -18,12 +18,13 @@
   "exclude_pos_tag": ["E", "A", "L", "CH", "X"],
   "exclude_word": ["bị", "được", "giữa", "và", "là"],
   "intent_data_path": "nlu/data/IntentData.csv",
-  "intent_model_path": "nlu/data/intent_reconizer",
+  "intent_model_weights": "nlu/data/intent_reconizer/intent_reconizer",
   "intent_map_path": "nlu/data/intent_map.pickle",
   "question_type_data_path": "nlu/data/QuestionTypeData",
-  "question_type_model_path": "nlu/data/question_type_reconizer",
+  "question_type_model_weights": "nlu/data/question_type_reconizer/question_type_reconizer",
   "question_type_map_path": "nlu/data/question_type_map.pickle",
   "global_synonyms_file_path": "nlu/data/global_synonyms.json",
   "synonyms_file_path": "nlu/data/synonyms.json",
-  "predict_threshold": "0.5"
+  "predict_threshold": "0.5",
+  "max_sentence_length": 30
 }
